<resources>
    <string name="app_name">Mera Ghar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dealer">Dealer</string>
    <string name="continue_with">Continue with</string>
    <string name="nineOne">+91</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="wrong_number">wrong number?</string>
    <string name="no_need_to_sign_up">No need to <b>Sign-up</b>. If you are new user then new account will be automatically created and you will be directly <b>Signed-in</b></string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="gender">Gender</string>
    <string name="update"><b>UPDATE</b></string>
    <string name="skip">SKIP</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="profile_verification">Profile Verification</string>
    <string name="incomplete">Incomplete</string>
    <string name="status">status</string>
    <string name="driving_license">Driving License</string>
    <string name="aadhaar_card">Aadhaar Card</string>
    <string name="upload">UPLOAD</string>
    <string name="dealer_login">Dealer Login</string>
    <string name="profile">Profile</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="submit">SUBMIT</string>
    <string name="submit_to_verify">submit to verify</string>
    <string name="visiting_card">Visiting Card</string>
    <string name="upload_aadhar_card_image">Upload Aadhar Card Image</string>
    <string name="image_must_contain">Image must contain</string>
    <string name="license_guidelines">- Name, dob, license number, expiry date should be visible.\n
                                      - Complete house address should be visible.\n
                                      - Blurry image wil not be accepted.\n
                                      - License already registered with CarByke will not be accepted.</string>
    <string name="aadhar_guidelines">- Name, dob, license number, expiry date should be visible.\n
                                     - Complete house address should be visible.\n
                                     - Blurry image wil not be accepted.\n
                                     - Aadhar Number already registered with CarByke will not be accepted.</string>
    <string name="upload_visiting_card_image">Upload Visiting Card Image</string>
    <string name="enter_ful_name">Enter ful name</string>
    <string name="enter_alternate_number">Enter alternate number</string>
    <string name="your_residence_state">Your residence state</string>
    <string name="your_residence_city">Your residence city</string>
    <string name="your_residence_6_digit_pin_code">Nearest post-office pin code</string>
    <string name="add_image">Add Image</string>
    <string name="pick_address_from_map">Pick Address from Map. This will be used to show location of property for rent to users.</string>
    <string name="bedrooms">BedRooms</string>
    <string name="bathrooms">bathrooms</string>
    <string name="furnished">furnished</string>
    <string name="builtup_area">Builtup Area</string>
    <string name="carpet_area">Carpet Area</string>
    <string name="sq_feet">Sq Feet</string>
    <string name="total_floors">Total Floors</string>
    <string name="floors_for_rent">Floor for Rent</string>
    <string name="amount_payable_per_month">Amount Payable Per Month</string>
    <string name="add_property">Add Property</string>
    <string name="select_images">Select Images</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_location_here">Search location here</string>
    <string name="select">Select</string>
    <string name="click_on_map_to_select_location">Click on map to select location</string>
    <string name="continue1">Continue</string>
    <string name="select_location">Select Location</string>
    <string name="address">Address</string>
    <string name="this_address_will_be_visible_to_users">This Address will be visible to users</string>
    <string name="write_key_points_in_formatted_fashion">Write key points in formatted fashion</string>
    <string name="about_property">About Property</string>
    <string name="type">Type</string>
    <string name="hbk_pg_appartment_office_other">HBK / PG / APPARTMENT / OFFICE / OTHER</string>

</resources>
