<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".DealerPhoneLogin">

    <!--upper Layout-->
    <RelativeLayout
        android:id="@+id/pl_rel1"
        android:layout_width="match_parent"
        android:layout_height="170dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dealer_phone_login_background"
            android:scaleY="1.4"
            tools:ignore="ContentDescription" />

        <!--cancel-->
        <ImageButton
            android:id="@+id/pl_cancel_ib"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/ic_cancel_white"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dealer_login"
            style="@style/CustomTextStyle18"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            tools:ignore="RelativeOverlap" />



    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pl_rel1"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <!--wrong number-->
            <TextView
                android:id="@+id/pl_wrong_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/wrong_number"
                style="@style/CustomTextStyle12"
                android:textColor="@color/googleRed"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="7dp"
                android:visibility="gone"
                />


            <LinearLayout
                android:id="@+id/pl_linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="32dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextStyle16"
                    android:background="@drawable/edit_text_background_app_color_border"
                    android:padding="@dimen/textViewPadding"
                    android:text="@string/nineOne"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_india_flag"
                    android:drawablePadding="@dimen/textViewPadding"
                    />

                <EditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextStyle16"
                    android:hint="@string/enter_phone_number"
                    android:background="@drawable/edit_text_background_app_color_border"
                    android:padding="@dimen/textViewPadding"
                    android:drawableEnd="@drawable/ic_mobile"
                    android:inputType="phone"
                    android:textStyle="bold"
                    android:maxLength="10"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/pl_linear1"
                android:layout_below="@+id/pl_linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                >
                <!--giving padding to show elevation of buttons-->
                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/sendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    fancy:fb_borderColor="@color/lightGreen"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/lightGreen"
                    fancy:fb_focusColor="@color/white"
                    fancy:fb_radius="4dp"
                    fancy:fb_text="Send OTP  "
                    fancy:fb_textColor="@color/white"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:elevation="@dimen/elevation"
                    tools:targetApi="lollipop"
                    android:layout_marginBottom="@dimen/elevation"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/resendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    fancy:fb_borderColor="@color/lightCoral"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/lightCoral"
                    fancy:fb_focusColor="@color/white"
                    fancy:fb_radius="4dp"
                    fancy:fb_text="Resend OTP"
                    fancy:fb_textColor="@color/white"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:elevation="@dimen/elevation"
                    tools:targetApi="lollipop"
                    />

            </LinearLayout>



            <!--countdown-->
            <com.serhatsurguvec.continuablecirclecountdownview.ContinuableCircleCountDownView
                android:id="@+id/pl_circleCountDownView"
                android:layout_below="@+id/pl_linear1"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:shapeRate="15"
                app:shadowEnabled="false"
                app:innerColor="@color/white"
                app:outerColor="@color/white"
                app:progress="0"
                app:textColor="#FF000000"
                app:progressColor="@color/lightGreen"
                app:textSize="12sp"
                android:visibility="gone"
                />

            <!--loading view-->
            <com.github.ybq.android.spinkit.SpinKitView
                android:visibility="gone"
                android:layout_below="@+id/pl_linear1"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pl_spin_kit"
                style="@style/SpinKitView.Small.Circle"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:SpinKit_Color="@color/black" />


            <!--otp sent message-->
            <TextView
                android:id="@+id/pl_otp_text"
                android:layout_below="@+id/pl_circleCountDownView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                style="@style/CustomTextStyle12"
                android:textColor="@color/gray"
                android:layout_marginTop="12dp"
                />


            <RelativeLayout
                android:layout_below="@+id/pl_otp_text"
                android:id="@+id/pl_otpRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

                <com.chaos.view.PinView
                    android:id="@+id/codeText"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:itemBackground="@color/whiteSmoke"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/black"
                    app:cursorWidth="1dp"
                    app:itemCount="6"
                    app:itemHeight="36dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="12dp"
                    app:itemWidth="36dp"
                    app:lineColor="@color/black10"
                    app:lineWidth="1dp"
                    app:viewType="rectangle"
                    android:layout_marginTop="48dp"
                    />


                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/verifyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    fancy:fb_borderColor="@color/lightGreen"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/lightGreen"
                    fancy:fb_focusColor="@color/white"
                    fancy:fb_radius="4dp"
                    fancy:fb_text="Verify OTP"
                    fancy:fb_textColor="@color/white"
                    android:layout_below="@id/codeText"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="24dp"
                    android:elevation="@dimen/elevation"
                    tools:targetApi="lollipop"
                    />

            </RelativeLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>





</RelativeLayout>